Add a quiet mode, usefull for cron jobs

--- a/demo.conf
+++ b/demo.conf
@@ -3,6 +3,9 @@
 # Set to 1 to initialise all already created tickets without spamming the team
 INIT=0
 
+# Quiet mode: don't report RT errors 1 = no report
+QUIET=1
+
 ####Celui qui est marqué expéditeur du script:
 FROMMAIL=sender@unistra.fr.spam
 
